--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon --exec babel-node index.js"
+    "serve": "node index.js"
   },
   "author": "Filippo Bubić",
   "license": "ISC",
